 * Language and i18n:
   * Updated translations: British English, Chinese (Traditional), Dutch,
     Galician, German, Italian, Latin, Portuguese, Portuguese (Brazil),
     Scottish Gaelic, Slovak
 * Multiplayer:
   * Moved new lobby option in Preferences -> Multiplayer to Advanced
     Preferences and clarified description
 * WML engine:
   * Fixed [disallow_end_turn] losing effect on save/reload (bug #20350)
   * Fixed [disallow_end_turn] persisting when advancing to the next scenario
     (bug #20351)
   * Fixed bug #20401: [remove_unit_overlay] did not work when the image used an
     image path function that took multiple parameters.
 * Miscellaneous and bug fixes:
   * Fixed a rare case where a player could exercise (very) limited control of
     another (human) player's units in a hotseat game.
   * Made wmllint recognize victory_string, defeat_string, gold_carryover_string,
     and notes_string (all from the [objectives] tag) as attributes that need
     to be made translatable
   * Fixed wmllint complaining about id= attributes in [time_area]s
   * Make drakes fly on volcano tiles (bug #20485).
   * Fixed bug #20290: No longer terminate due to a corrupt savegame.
   * Fixed bug #19970: No longer terminate due to corrupt preferences.
   * Fixed a display artifact (halos not cleared) when WML moves a unit.
   * Use bilinear interpolation for scaling images down.
   * Fixed wmllint, wmlscope and wmlindent not working correctly on Windows if a
     command line argument ends with a backslash

Version 1.10.5:
 * Campaigns:
   * Under the Burning Suns:
     * Keep a spawned unit from disappearing on reload in scenario 6b
 * Graphics:
   * Fixed glitches caused by larger-than-hex standing units with certain frame
     image effects when image= is not explicitly specified (bug #20099)
 * Language and i18n:
   * New translation: Scottish Gaelic
   * Updated translations: Chinese (Traditional), Croatian, French, Galician,