@@ -11,6 +11,9 @@ Version 1.10.5+svn:
  * Multiplayer:
    * Moved new lobby option in Preferences -> Multiplayer to Advanced
      Preferences and clarified description
+ * User interface:
+   * Scale down unit baseframes larger than 72x72 in the Recruit and Recall
+     dialogs to prevent all list entries from being enlarged to fit
  * WML engine:
    * Fixed [disallow_end_turn] losing effect on save/reload (bug #20350)
    * Fixed [disallow_end_turn] persisting when advancing to the next scenario
